# rotv

./: .env.example  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.base  Containerfile.images  Containerfile.immich  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  EXEC_SUMMARY.md  HANDOFF_SUMMARY.md  NEWSLETTER_DEPLOYMENT.md  NEXT_STEPS.md  PACKAGE_STRUCTURE.md  PRODUCTION_INCIDENT_README.md  PROD_FIX_QUICKREF.md  PROD_ISSUE_FLOWCHART.md  PROD_TROUBLESHOOT.md  README.md  README_PRODUCTION.md  TROUBLESHOOTING_PACKAGE_INDEX.md  clippy.toml  entrypoint.sh  gourmand-exceptions.toml  gourmand.toml  package-lock.json  package.json  pyproject.toml  run.sh
.githooks/: pre-push
.github/: RELEASE_WORKFLOW.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-base.yml  build-images.yml  build.yml  gourmand.yml  smoke-test.yml  test.yml  tests.yml  validate-constitution.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
backend/: .eslintignore  eslint.config.js  package-lock.json  package.json  server.js  test-back-button.js  test-comprehensive-urls.js  test-direct-poi-load.js  test-final-mtb-urls.js  test-find-map-instance.js  test-leaflet-access.js  test-map-errors.js  test-map-init.js  test-mtb-click-with-console.js  test-mtb-urls.js  test-poi-errors.js  test-poi-path-urls.js  test-sidebar-close.js  test-twitter-login.js  test-zoom-from-list.js  vitest.config.js
backend/config/: passport.js
docs/: CI_CD_TESTING.md  NEWS_EVENTS_ARCHITECTURE.md  SERPER_INTEGRATION.md  SERPER_TESTING_CHECKLIST.md  TEST_AUTH_BYPASS.md  TRAIL_STATUS_ARCHITECTURE.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
image-server/: .gitignore  README.md  pyproject.toml
image-server/scripts/: migrate-from-immich.sh  regenerate-thumbnails.py
image-server/src/image_server/: __init__.py  __main__.py  api.py  config.py  database.py  embedder.py  exif.py  main.py  thumbnails.py  vision.py
image-server/tests/: conftest.py  test_api.py  test_config.py  test_embedder.py  test_exif.py  test_thumbnails.py  test_vision.py
scripts/: diagnose-production.sh  fix-production.sh  post-deployment-report.sh  setup-mtb-trails.sh  verify-migrations.sh
(+286 files in other folders)
