[project]
name = "image-server"
version = "0.1.0"
description = "Lightweight image server with AI captioning and semantic search"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    { name = "crunchtools.com" }
]
readme = "README.md"
keywords = ["image-server", "fastapi", "pgvector", "semantic-search", "ai-captioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "fastembed>=0.4",
    "Pillow>=11.0",
    "python-multipart>=0.0.18",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "C4", "C901", "DTZ", "T10", "ISC", "PIE", "PT", "RET", "SIM", "TID", "TCH", "ARG", "PLC", "PLE", "PLR", "PLW", "TRY", "RUF"]
ignore = [
    "S101",     # assert allowed in tests
    "TRY003",   # long exception messages ok
    "PLR0913",  # many arguments ok for API handlers
    "PLR2004",  # magic numbers ok (HTTP status codes, limits)
    "PLW0603",  # global statement ok for singletons
    "PLC0415",  # imports in functions ok
    "S105",     # hardcoded passwords in tests ok
    "TID252",   # relative imports in package ok
    "RUF022",   # __all__ sorted by category
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "PLC0415", "PLR2004", "ARG002"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fastembed", "google", "google.genai", "PIL", "PIL.ExifTags", "pgvector", "pgvector.psycopg"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
